--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                                                 <div class="col-lg-10">
                                                     <div class="coming-soon-text">
                                                         <h3>بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</h3>
-                                                        <p>In The Name Of Allah, The Most Beneficent, The Most Merciful
-                                                        </p>
+                                                        <p>In The Name Of Allah, The Most Beneficent, The Most Merciful.</p>
+                                                        <hr style="width: 55%; margin: 7px auto;"/>
                                                         <p>Together With Their Families</p>
                                                         <p>&nbsp;</p>
                                                         <h2>Rizwan & Shama</h2>
@@ -53,7 +53,7 @@
                                                         <p>Cordially Invited You To Their NIKAH Ceremony</p>
                                                         <p>Thursday, 17 Apr. 2025 After Namaz-e-Zohar</p>
                                                         <p>Reception on Sunday, 20 Apr. 2025</p>
-                                                        <hr>
+                                                        <hr style="margin: 7px auto; width: 80%;" />
                                                         <a href="https://maps.app.goo.gl/kybebCRhjW4WrRBZ7"
                                                             target="_blank" style="color: #585858;">Click For
                                                             Location</a>
