--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                                                         <p>&nbsp;</p>
                                                         <h2>Rizwan & Shama</h2>
                                                         <p style="font-size: 12px; font-weight: 700;">(S/o Iqbal Husain
-                                                            & Sahenaz Bano) &nbsp;&nbsp; (D/o Sagir Siddiqui & Sazda
-                                                            Siddiqui)</p>
+                                                            & Sahenaz Bano) &nbsp;&nbsp; (D/o Sagir Siddiqui & Azmatun nisha)</p>
                                                         <p>Cordially Invited You To Their NIKAH Ceremony</p>
                                                         <p>Thursday, 17 Apr. 2025 After Namaz-e-Zohar</p>
                                                         <p>Reception on Sunday, 20 Apr. 2025</p>
