--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                                                         <p>Cordially Invited You To Their NIKAH Ceremony</p>
                                                         <p>Thursday, 17 Apr. 2025 After Namaz-e-Zohar</p>
                                                         <p>Reception on Sunday, 20 Apr. 2025</p>
-                                                        <hr style="margin: 7px auto; width: 80%;" />
                                                         <a href="https://maps.app.goo.gl/kybebCRhjW4WrRBZ7"
-                                                            target="_blank" style="color: #585858;">Click For
-                                                            Location</a>
+                                                            target="_blank" style="color: #585858;">Click For Wedding Location</a>
+                                                        <hr style="margin: 7px auto; width: 80%;" />
+                                                        <a href="https://maps.app.goo.gl/gAibebHwMJc7H3DU7"
+                                                            target="_blank" style="color: #585858;">Click For Surat Reception Location</a>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
