--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                                                         <a href="https://maps.app.goo.gl/kybebCRhjW4WrRBZ7"
                                                             target="_blank" style="color: #585858;">Click For Wedding Location</a>
                                                         <hr style="margin: 7px auto; width: 80%;" />
+                                                        <p>Inshallah Surat Reception On Sunday, 25 May. 2025</p>
                                                         <a href="https://maps.app.goo.gl/gAibebHwMJc7H3DU7"
                                                             target="_blank" style="color: #585858;">Click For Surat Reception Location</a>
                                                     </div>
